Add URDF support

--- a/index.htm
+++ b/index.htm
@@ -12,6 +12,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="js/three.js"></script>
     <script src="js/STLLoader.js"></script>
+    <script src="js/URDFLoader.js"></script>
     <script src="js/OrbitControls.js"></script>
     <script src="index.js"></script>
   </body>
