--- a/index.htm
+++ b/index.htm
@@ -9,11 +9,12 @@
     </style>
   </head>
   <body>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="js/jquery-3.3.1.js"></script>
     <script src="js/three.js"></script>
     <script src="js/STLLoader.js"></script>
     <script src="js/URDFLoader.js"></script>
     <script src="js/OrbitControls.js"></script>
+    <script src="js/mqttws31.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
